# Backtesting-Engine

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: c-cpp.yml
cpp-backtesting-engine/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  INTERVAL_SUPPORT_SUMMARY.md  README.md  RENDER_DEPLOYMENT.md  build.sh  debug_libs.sh  deploy.sh  docker-compose.yml  render.yaml  start.sh  test_docker.sh  test_symbol_debug  test_symbol_fix  test_symbol_validation
cpp-backtesting-engine/benchmarks/: README.md
cpp-backtesting-engine/build-local-tests/: BacktestingEngineConfig.cmake  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  test_csv_date_filter  test_determinism_execution_seed  test_realized_pnl_fifo  test_risk_exposure_units
cpp-backtesting-engine/build-local-tests/Testing/Temporary/: CTestCostData.txt
cpp-backtesting-engine/cmake/: BacktestingEngineConfig.cmake.in
cpp-backtesting-engine/consumer/: CMakeLists.txt  main.cpp
cpp-backtesting-engine/data/: download_report.json
cpp-backtesting-engine/data/sp500/: AAPL.csv  ABBV.csv  ADBE.csv  AMD.csv  AMZN.csv  AVGO.csv  BA.csv  BAC.csv  BRK-B.csv  CAT.csv  COST.csv  CRM.csv  CSCO.csv  CVX.csv  DIS.csv  FDX.csv  GOOG.csv  GOOGL.csv  INTC.csv  JNJ.csv  JPM.csv  KO.csv  LLY.csv  MA.csv  MCD.csv  META.csv  MRK.csv  MSFT.csv  NFLX.csv  NKE.csv  NVDA.csv  ORCL.csv  PEP.csv  PFE.csv  PG.csv  QCOM.csv  T.csv  TSLA.csv  UNH.csv  UPS.csv  (+4 more)
cpp-backtesting-engine/docs/: CMakeIntegration.md  C_API.md  INSTALL.md  JSON_CONFIG.md
cpp-backtesting-engine/examples/: csv_library_usage_example.cpp  yfinance_usage_example.cpp
cpp-backtesting-engine/include/c_api/: backtest_c.h
cpp-backtesting-engine/include/cli/: cli.h  interactive_cli.h
cpp-backtesting-engine/include/common/: strategy_schema.h  time_utils.h  types.h
cpp-backtesting-engine/include/context/: regime_classifier.h
cpp-backtesting-engine/include/data/: alpha_vantage_handler.h  data_handler.h  data_handler_factory.h  data_source_router.h  data_validator.h  iex_handler.h  multi_source_data_handler.h  polygon_handler.h  stock_symbols.h  symbol_cache.h  technical_indicators.h  yfinance_handler.h
cpp-backtesting-engine/include/engine/: backtest_engine.h  replay_engine.h
cpp-backtesting-engine/include/execution/: enhanced_execution_handler.h  execution_handler.h
cpp-backtesting-engine/include/performance/: advanced_metrics.h  performance_analyzer.h
cpp-backtesting-engine/include/portfolio/: multi_asset_portfolio.h  portfolio_manager.h
cpp-backtesting-engine/include/risk/: advanced_risk_manager.h  risk_manager.h
cpp-backtesting-engine/include/strategy/: advanced_strategies.h  bollinger_bands_strategy.h  code_generator.h  macd_strategy.h  machine_learning_strategy.h  moving_average_strategy.h  multi_leg_strategy.h  natural_language_parser.h  rsi_strategy.h  strategy.h  strategy_factory.h
cpp-backtesting-engine/scripts/: benchmark.sh  setup_enhanced_data_system.sh  smoke_test.sh
cpp-backtesting-engine/src/: main.cpp  server.cpp
cpp-backtesting-engine/src/c_api/: backtest_c.cpp
cpp-backtesting-engine/src/cli/: cli.cpp  interactive_cli.cpp
cpp-backtesting-engine/src/context/: regime_classifier.cpp
cpp-backtesting-engine/src/data/: alpha_vantage_handler.cpp  api_data_handler.cpp  csv_data_handler.cpp  data_handler_factory.cpp  data_source_router.cpp  data_validator.cpp  iex_handler.cpp  polygon_handler.cpp  real_time_data_handler.cpp  stock_symbols.cpp  symbol_cache.cpp  technical_indicators.cpp  yfinance_handler.cpp
cpp-backtesting-engine/src/engine/: backtest_engine.cpp  replay_engine.cpp
cpp-backtesting-engine/src/execution/: execution_handler.cpp
cpp-backtesting-engine/src/performance/: advanced_metrics.cpp  performance_analyzer.cpp
cpp-backtesting-engine/src/portfolio/: multi_asset_portfolio.cpp  portfolio_manager.cpp
cpp-backtesting-engine/src/risk/: advanced_risk_manager.cpp  risk_manager.cpp
cpp-backtesting-engine/src/strategy/: advanced_strategies.cpp  bollinger_bands_strategy.cpp  code_generator.cpp  macd_strategy.cpp  moving_average_crossover.cpp  moving_average_strategy.cpp  multi_leg_strategy.cpp  natural_language_parser.cpp  rsi_strategy.cpp  strategy.cpp  strategy_factory.cpp
cpp-backtesting-engine/test_cache/: AAPL.json  AAPL_1d.json
cpp-backtesting-engine/test_cache_1440/: AAPL_1d.json
cpp-backtesting-engine/tests/: config_validate_const_test.cpp  csv_data_handler_date_filter_test.cpp  determinism_execution_seed_test.cpp  execution_model_test.cpp  realized_pnl_fifo_test.cpp  risk_exposure_units_test.cpp  utc_timestamp_test.cpp
cpp-backtesting-engine/vcpkg-port/: vcpkg.json
documentation/adr/: 0001-backend-module-boundaries.md
